--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ In final year towards a Bachelor’s in Computer Science at California State Pol
             <p>A clone of the classic 1987 arcade game Contra from Konami, with an additional variant mode, as a final project for Game Development (Fall 2020).
 
 Developed by myself, Ethan Bangar-Martinez, Justin Robinson, Joanna Cao, and James Gaier.</p>
-            <p><a href="https://api.github.com/repos/lukedoukakis/contra-platformer" class="link">View</a></p>
+            <p><a href="https://github.com/lukedoukakis/contra-platformer" class="link">View</a></p>
 
             <div class="tech-items">
             </div>
