--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ In final year towards a Bachelor’s in Computer Science at California State Pol
           <div class="col-lg-6 about-repo">
             <h3>Orbis Terrarum</h3>
             <p>A procedurally generated low-poly world that combines several noise maps and custom shaders to create rolling landscapes and biomes.</p>
-            <p><a href="https://www.youtube.com/watch?v&#x3D;K0nGPhG4Lio" class="link">View</a></p>
+            <p><a href="https://github.com/lukedoukakis/orbis-terrarum" class="link">View</a></p>
 
             <div class="tech-items">
             </div>
