--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
       }
 
       /* Begin dark mode specific styles */ 
-      /* body {
-        background-color: #38444b;
+      body {
+        /* background-color: #38444b; */
+        background-color: #2b404d;
       }
 
       hr {
+        /* border-color: #565656; */
         border-color: #565656;
       }
 
@@ -74,11 +76,11 @@
 
       .tech-items i:hover {
         color: initial;
-      } */
+      }
       /* END dark mode specific styles */
       
       /* Begin light mode specific styles */
-      h1, h2, h3, h4, h5{
+      /* h1, h2, h3, h4, h5{
         color: #3a3a3a;
         font-weight: 300;
         font-family: 'Open Sans', sans-serif;
@@ -94,7 +96,7 @@
 
       .socialLinks a {
         color: #c3c3c3;
-      }
+      } */
       /* END light mode specific styles */
 
       h2 {
@@ -158,7 +160,9 @@
       }
 
       .profile-pic {
+        border-style: solid;
         border-radius:50%;
+        border-color: rgb(237, 237, 237);
         width:40%;
         max-width: 275px;
       }
