--- a/index.html
+++ b/index.html
@@ -261,10 +261,12 @@
       <div class="col col-xs-12 col-header">
           <img src="https://i.imgur.com/lifpeL8.jpg" alt="profile pic" class="img-fluid profile-pic center-block">
         <div class="about">
-          <h1 style="font-weight: 400; font-size: 42px;">Luke Doukakis</h1>
-          <h2 style="font-size: 32px;">Graduating computer science student</h2>
-          <h2 style="font-size: 32px;">Bachelor’s in Computer Science at California State Polytechnic University, Pomona</h2>
+          <h1 style="font-weight: 400; font-size: 42px; margin-bottom: 10px;">Luke Doukakis</h1>
+          <h2 style="font-size: 32px; margin-bottom: 0px;">Computer Science graduate from Cal Poly Pomona.</h2>
+          <h2 style="font-size: 32px; margin-bottom: 30px;">Software and game developer.</h2>
           <a href="mailto:lukedoukakis97@gmail.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>lukedoukakis97@gmail.com</a>
+          <br>
+          <a href="https://github.com/lukedoukakis" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>github.com/lukedoukakis</a>
           <p style="margin-top:15px">
             <i class="fas fa-map-marker-alt"></i> 
             <span class="location">Santa Clarita, California</span>
@@ -295,7 +297,8 @@
           <div class="col-lg-6 about-repo">
             <h3>Grocceries Grocery Delivery Service</h3>
             <p>This is the result of my final project for Software Engineering, a grocery delivery web application created using Django web development framework. I learned to work full stack, from communicating with databases to creating dynamic interfaces with HTML/CSS and JavaScript.</p>
-            <p><a href="http://grocceries.shop/" class="link">View</a></p>
+            <p style = "margin-bottom: 0px;"><a href="http://grocceries.shop/" class="link">Website</a></p>
+            <p><a href="https://github.com/lukedoukakis/grocceries" class="link">Code</a></p>
 
             <div class="tech-items">
               <i class="devicon-django-plain-wordmark colored animated"></i>
@@ -316,7 +319,8 @@
           <div class="col-lg-6 about-repo">
             <h3>Speed Stars</h3>
             <p>A goofy but difficult to master foot racing game available on Steam. This was my first full project I made with Unity, where I went full in on the game development process from design to programming to art to publishing.</p>
-            <p><a href="https://store.steampowered.com/app/1482700/Speed_Stars/" class="link">View</a></p>
+            <p style = "margin-bottom: 0px;"><a href="https://store.steampowered.com/app/1482700/Speed_Stars/" class="link">Steam page</a></p>
+            <p><a href="https://github.com/lukedoukakis/speed-stars/tree/master/Project/Assets/My%20Assets/scripts" class="link">Code</a></p>
 
             <div class="tech-items">
               <i class="devicon-csharp-plain-wordmark colored animated"></i>
@@ -334,7 +338,8 @@
           <div class="col-lg-6 about-repo">
             <h3>Orbis Terrarum</h3>
             <p>A procedurally generated low-poly world I created with Unity, that combines several noise maps and uses custom shaders to create rolling landscapes and biomes. I took on this side project as a programming challenge as well as to learn more advanced graphical techniques.</p>
-            <p><a href="https://github.com/lukedoukakis/orbis-terrarum" class="link">View</a></p>
+            <p style = "margin-bottom: 0px;"><a href="https://www.youtube.com/watch?v=K0nGPhG4Lio" class="link">Video</a></p>
+            <p><a href="https://github.com/lukedoukakis/orbis-terrarum/tree/main/Humans/Assets/Scripts" class="link">Code</a></p>
 
             <div class="tech-items">
               <i class="devicon-csharp-plain-wordmark colored animated"></i>
@@ -351,10 +356,10 @@
           
           <div class="col-lg-6 about-repo">
             <h3>Contra (Clone)</h3>
-            <p>A clone of the classic 1987 arcade game Contra from Konami, with an additional variant mode, as a final project for Game Development (Fall 2020).
+            <p>A clone of the classic 1987 arcade game Contra from Konami, with an additional variant mode, as a final group project for Game Development (Fall 2020).
 
-Developed by myself, Ethan Bangar-Martinez, Justin Robinson, Joanna Cao, and James Gaier.</p>
-            <p><a href="https://github.com/lukedoukakis/contra-platformer" class="link">View</a></p>
+Created by by Luke Doukakis, Ethan Bangar-Martinez, Justin Robinson, Joanna Cao, and James Gaier.</p>
+            <p><a href="https://github.com/lukedoukakis/contra-platformer/tree/main/Assets/Scripts" class="link">Code</a></p>
 
             <div class="tech-items">
               <i class="devicon-csharp-plain-wordmark colored animated"></i>
