--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <!-- Intro, name, description -->
     <div class="row text-center row-header">
       <div class="col col-xs-12 col-header">
-          <img src="https://i.imgur.com/lifpeL8.jpg" alt="profile pic" class="img-fluid profile-pic center-block">
+          <img src="https://i.imgur.com/m954Gd4.jpg" alt="profile pic" class="img-fluid profile-pic center-block">
         <div class="about">
           <h1 style="font-weight: 400; font-size: 42px; margin-bottom: 10px;">Luke Doukakis</h1>
           <h2 style="font-size: 32px; margin-bottom: 0px;">Computer Science graduate from Cal Poly Pomona.</h2>
