--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
           <div class="col-lg-6 about-repo">
             <h3>Speed Stars</h3>
             <p>A goofy but difficult to master foot racing game available on Steam. This was my first full project I made with Unity, where I went full in on the game development process from design to programming to art to publishing.</p>
-            <p style = "margin-bottom: 0px;"><a href="https://store.steampowered.com/app/1482700/Speed_Stars/" class="link">Steam page</a></p>
-            <p><a href="https://github.com/lukedoukakis/speed-stars/tree/master/Project/Assets/My%20Assets/scripts" class="link">Code</a></p>
+            <p style = "margin-bottom: 0px;"><a href="https://apps.apple.com/us/app/speed-stars/id1573039936" class="link">App store link</a></p>
+            <p><a href="https://store.steampowered.com/app/1482700/Speed_Stars/" class="link">Steam link</a></p>
 
             <div class="tech-items">
               <i class="devicon-csharp-plain-wordmark colored animated"></i>
