--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       body {
         /* background-color: #38444b; */
         background-color: #2b404d;
+        background-image: url('https://i.imgur.com/DzRrZER.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
       }
 
       hr {
