--- a/index.html
+++ b/index.html
@@ -508,17 +508,17 @@
       </video>
     </div>
 
-    <div style="justify-content: center; width: 800px; min-width: 800px; z-index: 1; background-color: rgba(0,0,0,0); padding-left: 50px; padding-right: 50px; padding-bottom: 200px; margin-left: 0px; margin-right: 0px;">
+    <div style="justify-content: center; width: 800px; z-index: 1; background-color: rgba(0,0,0,0); padding-left: 50px; padding-right: 50px; padding-bottom: 200px; margin-left: 0px; margin-right: 0px;">
       <div class="row repo" id="speed_stars_content" style="margin-top:75px; display: flex; justify-content: center; margin-bottom: 100px; margin-left: 0px; margin-right: 0px;">
         <div class="col-lg-6 about-repo" style="display: flex; justify-content: center;">
           <h8 style="margin-bottom: 25px;">Speed Stars</h8>
           <h7>A free-to-play mobile track and field game available on the iOS App Store and
             Google Play.
           </h7>
-          <div class="row repo" id="speed_stars_content" style="display: flex; justify-content: left; text-align: center; margin: 0px;">
+          <div class="row repo" id="speed_stars_content" style="display: flex; justify-content: left; text-align: left; margin: 0px;">
             <p style = "margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;" class="fa">&#xf179;</i><a href="https://apps.apple.com/us/app/speed-stars/id1573039936" class="link">iOS</a></p>
           </div>
-          <div class="row repo" id="speed_stars_content" style="display: flex; justify-content: left; text-align: center; margin: 0px;">
+          <div class="row repo" id="speed_stars_content" style="display: flex; justify-content: left; text-align: left; margin: 0px;">
             <p style = "margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;" class='fab'>&#xf3ab;</i><a href="https://apps.apple.com/us/app/speed-stars/id1573039936" class="link">Google Play</a></p>
           </div>
           
