--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 
     h7 {
       color: #ffffff;
-      font-size: 32px;
+      font-size: 24px;
       font-family: Arial, Helvetica, sans-serif;
       font-stretch: 50%;
       line-height: 150%;
-      font-weight: bolder;
+      font-weight: bold;
       text-align: left;
     }
 
     h8 {
       color: #ffffff;
-      font-size: 44px;
+      font-size: 36px;
       font-family: 'Goldman', sans-serif;
       /* font-weight:lighter; */
       font-stretch: 100%;
@@ -110,7 +110,7 @@
 
     h9 {
       color: #ffffff;
-      font-size: 44px;
+      font-size: 36px;
       font-family: 'Rakkas', serif;
       /* font-weight:lighter; */
       font-stretch: 100%;
@@ -472,12 +472,12 @@
       <img
         src="https://media.licdn.com/dms/image/D5603AQGfPOMtULkG0w/profile-displayphoto-shrink_200_200/0/1704409752490?e=1712188800&v=beta&t=Kj6zrCXbgivz6AUv7yfcTrvpLlbfnBJbDqwVCn7HQ6k"
         alt="profile pic" class="img-fluid profile-pic center-block">
-      <h6 style="margin-top: 30px;">
+      <h7 style="margin-top: 30px;">
         Luke Doukakis is a software engineer engineer and digital experience developer primarily focused in games and
         graphics programming.
         Specializing in Unity, he is well practiced with C# scripting, shader authoring with HLSL and
         Universal Render Pipeline, UI development, and character animation with Mecanim system.
-      </h6>
+      </h7>
     </div>
   </div>
 
@@ -515,7 +515,8 @@
         <div class="col-lg-6 about-repo" style="display: flex; justify-content: center;">
           <h8 style="margin-bottom: 25px;">Speed Stars</h8>
           <h7>A free-to-play mobile track and field game available on the iOS App Store and
-            Google Play.
+            Google Play. Epitomizing the concept of easy-to-learn and hard-to-master, Speed Stars captures attention through inviting yet intricate gameplay mechanics
+            and encourages competition through asynchronous multiplayer.
           </h7>
           <div class="row repo" id="speed_stars_content"
             style="display: flex; justify-content: left; text-align: left; margin: 0px;">
@@ -535,27 +536,6 @@
         <div class="col-lg-6">
           <img src="https://i.imgur.com/LAH38pf.png" alt="" class="img-fluid center-block">
         </div>
-
-        <div class="row repo" style="margin:0px; display: flex; justify-content: center;">
-          <h7 style="margin-top: 30px;">
-            Epitomizing the concept of easy-to-learn and hard-to-master, Speed Stars engages through enjoyment of
-            gameplay,
-            learning, and feeling of progression.
-            Colorful aesthetics and simple straight-forward controls invite you in. Intricate gameplay mechanics, a high
-            skill
-            ceiling and
-            fostering competitiveness through asynchronous multiplayer and leaderboards keep you feeling challenged to
-            want more!
-          </h7>
-        </div>
-
-
-        <!-- <p><a href="https://store.steampowered.com/app/1482700/Speed_Stars/" class="link">Steam link</a></p> -->
-
-        <!-- <div class="tech-items">
-          <i class="devicon-csharp-plain-wordmark colored animated"></i>
-        </div> -->
-
       </div>
 
 
