--- a/index.html
+++ b/index.html
@@ -515,7 +515,8 @@
         <div class="col-lg-6 about-repo" style="display: flex; justify-content: center;">
           <h8 style="margin-bottom: 25px;">Speed Stars</h8>
           <h7>A free-to-play mobile track and field game available on the iOS App Store and
-            Google Play. Epitomizing the concept of easy-to-learn and hard-to-master, Speed Stars captures attention through inviting yet intricate gameplay mechanics
+            Google Play. Epitomizing the concept of easy-to-learn and hard-to-master, Speed Stars captures attention
+            through inviting yet intricate gameplay mechanics
             and encourages competition through asynchronous multiplayer.
           </h7>
           <div class="row repo"
@@ -524,8 +525,7 @@
                 class="fa">&#xf179;</i><a href="https://apps.apple.com/us/app/speed-stars/id1573039936"
                 class="link">iOS</a></p>
           </div>
-          <div class="row repo"
-            style="display: flex; justify-content: left; text-align: left; margin: 0px;">
+          <div class="row repo" style="display: flex; justify-content: left; text-align: left; margin: 0px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
                 class='fab'>&#xf3ab;</i><a href="https://apps.apple.com/us/app/speed-stars/id1573039936"
                 class="link">Google Play</a></p>
@@ -552,13 +552,12 @@
           <div class="row repo"
             style="display: flex; justify-content: left; text-align: left; margin: 0px; margin-top: 16px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
-                class="fa">&#xf16a;</i><a href="https://www.youtube.com/watch?v=K0nGPhG4Lio"
-                class="link">Video</a></p>
+                class="fa">&#xf16a;</i><a href="https://www.youtube.com/watch?v=K0nGPhG4Lio" class="link">Video</a></p>
           </div>
-          <div class="row repo"
-            style="display: flex; justify-content: left; text-align: left; margin: 0px;">
+          <div class="row repo" style="display: flex; justify-content: left; text-align: left; margin: 0px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
-                class='fa'>&#xf09b;</i><a href="https://github.com/lukedoukakis/orbis-terrarum/tree/main/Humans/Assets/Scripts"
+                class='fa'>&#xf09b;</i><a
+                href="https://github.com/lukedoukakis/orbis-terrarum/tree/main/Humans/Assets/Scripts"
                 class="link">Code</a></p>
           </div>
 
@@ -568,27 +567,6 @@
           <img src="https://i.imgur.com/7R63vTt.png" alt="" style="max-width: 300px;">
         </div>
       </div>
-
-
-      <!-- <div class="row repo" id="orbis_terrarum_content"
-        style="display: flex; justify-content: center; margin-bottom: 50px">
-        <div class="col-lg-6 about-repo" style="display: flex; justify-content: center;">
-          <h9 style="margin-bottom: 25px;">Orbis Terrarum</h9>
-          <h7>A procedurally generated low-poly world I created with Unity, that combines several noise maps and uses
-            custom shaders to create rolling landscapes and biomes. I took on this side project as a programming
-            challenge
-            as well as to learn more advanced graphical techniques.</h7>
-          <p style="margin-bottom: 0px;"><a href="https://www.youtube.com/watch?v=K0nGPhG4Lio" class="link">Video</a>
-          </p>
-          <p><a href="https://github.com/lukedoukakis/orbis-terrarum/tree/main/Humans/Assets/Scripts" class="link"
-              style="margin-top: 20px;">Code</a></p>
-        </div>
-
-        <div class="col-lg-6">
-          <img src="https://i.imgur.com/7R63vTt.png" alt="" class="img-fluid center-block">
-        </div>
-
-      </div> -->
 
     </div>
 
