--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi, user-scalable=no">
 
   <title>Luke Doukakis</title>
 
@@ -63,6 +63,8 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
+
+      touch-action: manipulation;
     }
 
     hr {
@@ -522,12 +524,12 @@
           <div class="row repo"
             style="display: flex; justify-content: left; text-align: left; margin: 0px; margin-top: 16px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
-                class="fa">&#xf179;</i><a href="https://apps.apple.com/us/app/speed-stars/id1573039936"
+                class="fa">&#xf179;</i><a href="https://apps.apple.com/us/app/speed-stars/id1573039936" target="_blank"
                 class="link">iOS</a></p>
           </div>
           <div class="row repo" style="display: flex; justify-content: left; text-align: left; margin: 0px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
-                class='fab'>&#xf3ab;</i><a href="https://apps.apple.com/us/app/speed-stars/id1573039936"
+                class='fab'>&#xf3ab;</i><a href="https://play.google.com/store/apps/details?id=com.lukedoukakis.speedstars&hl=en_US&gl=US&pli=1" target="_blank"
                 class="link">Google Play</a></p>
           </div>
 
@@ -544,20 +546,21 @@
         style="display: flex; justify-content: center; margin-bottom: 50px; margin-left: 0px; margin-right: 0px;">
         <div class="col-lg-6 about-repo" style="display: flex; justify-content: center;">
           <h9 style="margin-bottom: 25px;">Orbis Terrarum</h9>
-          <h7>A procedurally generated low-poly world I created with Unity, that combines several noise maps and uses
-            custom shaders to create rolling landscapes and biomes. I took on this side project as a programming
+          <h7>A procedurally generated infinite low-poly world created with Unity. Noise maps defining elevation, heat,
+            humidity and more combine with custom shaders and post-processing
+            to create rolling landscapes and biomes. I took on this side project as a programming
             challenge
-            as well as to learn more advanced graphical techniques.
+            as well as to learn more about graphics and rendering techniques.
           </h7>
           <div class="row repo"
             style="display: flex; justify-content: left; text-align: left; margin: 0px; margin-top: 16px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
-                class="fa">&#xf16a;</i><a href="https://www.youtube.com/watch?v=K0nGPhG4Lio" class="link">Video</a></p>
+                class="fa">&#xf16a;</i><a href="https://www.youtube.com/watch?v=K0nGPhG4Lio" target="_blank" class="link">Video</a></p>
           </div>
           <div class="row repo" style="display: flex; justify-content: left; text-align: left; margin: 0px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
                 class='fa'>&#xf09b;</i><a
-                href="https://github.com/lukedoukakis/orbis-terrarum/tree/main/Humans/Assets/Scripts"
+                href="https://github.com/lukedoukakis/orbis-terrarum/tree/main/Humans/Assets/Scripts" target="_blank"
                 class="link">Code</a></p>
           </div>
 
