--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi, user-scalable=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi, user-scalable=no">
 
   <title>Luke Doukakis</title>
 
@@ -122,7 +123,13 @@
 
 
     a {
-      color: rgb(123, 123, 123)
+      color: rgb(255, 255, 255);
+      font-size: 16px;
+      font-family: Arial, Helvetica, sans-serif;
+      font-stretch: 50%;
+      line-height: 150%;
+      font-weight: bold;
+      text-align: left;
     }
 
     a:hover,
@@ -294,17 +301,31 @@
     }
 
     .row-footer {
+
       margin-top: 50px;
       margin-bottom: 50px;
       font-size: 12px;
+      z-index: 2;
+      text-align: center;
     }
 
     .row-footer p {
       margin: 0;
+      z-index: 2;
+      color: #ffffff;
+      font-size: 16px;
+      font-family: Arial, Helvetica, sans-serif;
+      font-stretch: 50%;
+      line-height: 150%;
+      font-weight: bold;
+      text-align: center;
     }
 
     .row-footer .socialLinks {
       margin-top: 8px;
+      z-index: 2;
+      color: #ffffff;
+      text-align: center;
     }
 
     .about-repo {
@@ -426,23 +447,6 @@
         <div class="col col-xs-12 col-header">
           <div class="about">
             <h1 style="font-weight: 400; font-size: 28px; margin-bottom: 6px;">Luke Doukakis</h1>
-            <a href="mailto:lukedoukakis97@gmail.com" class="email" style="font-size: 14px;"><span
-                class="glyphicon glyphicon-envelope" aria-hidden="true"></span>lukedoukakis97@gmail.com</a>
-            <br>
-            <a href="https://github.com/lukedoukakis" class="email" style="font-size: 14px;"><span
-                class="glyphicon glyphicon-envelope" aria-hidden="true"></span>github.com/lukedoukakis
-            </a>
-            <!-- <div class="socialLinks">
-              <a href="https://www.linkedin.com/in/lukedoukakis/" target="_blank">
-                <i class="fab fa-linkedin linkedin animated"></i>
-                <a href="https://www.linkedin.com/in/lukedoukakis/" class="email"><span class="glyphicon glyphicon-envelope"
-                  aria-hidden="false"></span>linkedin.com/in/lukedoukakis/</a>
-              </a>
-            </div> -->
-            <p style="margin-top:15px">
-              <i class="fas fa-map-marker-alt"></i>
-              <span class="location">Santa Monica, California</span>
-            </p>
           </div>
         </div>
       </div>
@@ -467,7 +471,8 @@
     </div>
   </div>
 
-  <div class="container"></div>
+
+  
   <div class="content" id="about" style="display: flex;">
     <div class="row text-center row-header"
       style="display: flex; justify-content: center; width: 400px; padding-left: 20px; padding-right: 20px; padding-top: 40px; padding-bottom: 40px;">
@@ -480,6 +485,20 @@
         Specializing in Unity, he is well practiced with C# scripting, shader authoring with HLSL and
         Universal Render Pipeline, UI development, and character animation with Mecanim system.
       </h7>
+  
+  
+      <p style="margin: 0px;"> <i style="color:#ffffff; padding-top: 50px; padding-right: 10px; text-align: left;" class='fa'>&#xf041;</i><a
+          style="font-size: 24px; text-align: left;" target="_blank" class="link">Santa Monica,
+          CA</a></p>
+  
+      <p style="margin: 0px;"> <i style="color:#ffffff; padding-right: 10px; text-align: left;" class='fa'>&#xf09b;</i><a
+          href="https://github.com/lukedoukakis/" style="font-size: 24px; text-align: left;" target="_blank"
+          class="link">github.com/lukedoukakis/</a></p>
+  
+      <p style="margin: 0px;"> <i style="color:#ffffff; padding-right: 10px; text-align: left;" class='fa'>&#xf0e0;</i><a
+          href="mailto:lukedoukakis97@gmail.com" style="font-size: 24px; text-align: left;" target="_blank"
+          class="link">lukedoukakis97@gmail.com</a></p>
+  
     </div>
   </div>
 
@@ -529,8 +548,9 @@
           </div>
           <div class="row repo" style="display: flex; justify-content: left; text-align: left; margin: 0px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
-                class='fab'>&#xf3ab;</i><a href="https://play.google.com/store/apps/details?id=com.lukedoukakis.speedstars&hl=en_US&gl=US&pli=1" target="_blank"
-                class="link">Google Play</a></p>
+                class='fab'>&#xf3ab;</i><a
+                href="https://play.google.com/store/apps/details?id=com.lukedoukakis.speedstars&hl=en_US&gl=US&pli=1"
+                target="_blank" class="link">Google Play</a></p>
           </div>
 
         </div>
@@ -555,7 +575,8 @@
           <div class="row repo"
             style="display: flex; justify-content: left; text-align: left; margin: 0px; margin-top: 16px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
-                class="fa">&#xf16a;</i><a href="https://www.youtube.com/watch?v=K0nGPhG4Lio" target="_blank" class="link">Video</a></p>
+                class="fa">&#xf16a;</i><a href="https://www.youtube.com/watch?v=K0nGPhG4Lio" target="_blank"
+                class="link">Video</a></p>
           </div>
           <div class="row repo" style="display: flex; justify-content: left; text-align: left; margin: 0px;">
             <p style="margin: 0px;"> <i style="font-size:32px; color:#ffffff; padding-right: 10px;"
@@ -573,16 +594,22 @@
 
     </div>
 
-
-
-
-    <!-- Technical Experience -->
-
-
   </div> <!-- end container -->
 
-
-  <div class="content" id="projects" style="display: none; justify-content: center;"></div>
+  <!-- Technical Experience -->
+  <div class="row row-footer">
+    <div class="col footer-col">
+      <hr>
+      <p><i class="far fa-copyright"></i> Luke Doukakis</p>
+      <!-- <p style = "color: #ffffff;">
+        Santa Monica, California
+      </p> -->
+      <!-- <div class="socialLinks">
+          <p style="margin: 0px;"> <i style="color:#ffffff; padding-right: 10px;"
+            class="fa">&#xf08c;</i><a href="https://www.linkedin.com/in/lukedoukakis/" target="_blank" class="link" style = "font-size: 16px;">LinkedIn</a></p>
+      </div> -->
+    </div>
+  </div>
 
   <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
