--- a/index.html
+++ b/index.html
@@ -235,6 +235,13 @@
       background: none;
       font-weight: 400;
       font-size: 42px;
+      outline:none;
+
+    }
+
+    .header-button:focus {
+
+      outline-style:none;
 
     }
 
@@ -307,6 +314,8 @@
       font-size: 12px;
       z-index: 2;
       text-align: center;
+      justify-content: center;
+      display: flex;
     }
 
     .row-footer p {
@@ -443,14 +452,12 @@
 
     <!-- Intro, name, description -->
     <div class="row text-center row-header" style="display: flex; justify-content: center;">
-      <div class="row row-header-element">
-        <div class="col col-xs-12 col-header">
-          <div class="about">
-            <h1 style="font-weight: 400; font-size: 28px; margin-bottom: 6px;">Luke Doukakis</h1>
+      <div class="row row-header-element" style = "width: 100vw; justify-content: center; text-align: center; padding: 0; margin: 0; margin-top: 1vh;">
+          <div class="about" style = "justify-content: center; text-align: center;">
+            <h1 style="font-weight: 400; font-size: 36px; margin-bottom: 0px; justify-content: center; text-align: center;">Luke Doukakis</h1>
           </div>
-        </div>
       </div>
-      <div style="display: table-row; height: 50px; padding-left: 100px; padding-right: 100px">
+      <div class="row row-header-element" style="display: flex; justify-content: center;">
         <button class="header-button" ; onclick="switchElement_header('about')">
           <div>
             <h2>About</h2>
@@ -461,11 +468,11 @@
             <h2>Projects</h2>
           </div>
         </button>
-        <button class="header-button" ; onclick="switchElement_header('work')">
+        <!-- <button class="header-button" ; onclick="switchElement_header('work')">
           <div>
             <h2>Work</h2>
           </div>
-        </button>
+        </button> -->
       </div>
 
     </div>
