--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         </button>
         <button class="header-button" ; onclick="switchElement_header('projects')">
           <div>
-            <h2>Projects</h2>
+            <h2>Work</h2>
           </div>
         </button>
         <!-- <button class="header-button" ; onclick="switchElement_header('work')">
