--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     <div class="row text-center row-header"
       style="display: flex; justify-content: center; width: 400px; padding-left: 20px; padding-right: 20px; padding-top: 40px; padding-bottom: 40px;">
       <img
-        src="https://media.licdn.com/dms/image/D5603AQGfPOMtULkG0w/profile-displayphoto-shrink_200_200/0/1704409752490?e=1712188800&v=beta&t=Kj6zrCXbgivz6AUv7yfcTrvpLlbfnBJbDqwVCn7HQ6k"
+        src="https://i.imgur.com/P0hnDpS.jpeg"
         alt="profile pic" class="img-fluid profile-pic center-block">
       <h7 style="margin-top: 30px;">
         Luke Doukakis is a software engineer engineer and digital experience developer primarily focused in games and
