--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
           class="link">lukedoukakis97@gmail.com</a></p>
   
     </div>
-    <a href="page2.html">ss</a>
+    <a href="ssindex.html">ss</a>
   </div>
 
 
