--- a/ssindex.html
+++ b/ssindex.html
@@ -81,9 +81,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Build_v2-35w.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build_v2-35w.data.br",
-        frameworkUrl: buildUrl + "/Build_v2-35w.framework.js.br",
-        codeUrl: buildUrl + "/Build_v2-35w.wasm.br",
+        dataUrl: buildUrl + "/Build_v2-35w.data.unityweb",
+        frameworkUrl: buildUrl + "/Build_v2-35w.framework.js.unityweb",
+        codeUrl: buildUrl + "/Build_v2-35w.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Luke Doukakis",
         productName: "Speed Stars",
