--- a/ssindex.html
+++ b/ssindex.html
@@ -1,146 +1,69 @@
+<!-- Play on Poki -->
+<!-- NOTE:
+	this HTML will not be used on Poki.com, the HTML will be auto generated from the index.json.
+	If you wish to add custom HTML you can add this in the "extra_html" part of the JSON.
+-->
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Speed Stars</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop" style="width:100vw; height: auto;">
-      <canvas id="unity-canvas" width=100% height=100% tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <!-- <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Speed Stars</div>
-      </div> -->
-    </div>
-    <script>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      //var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
+	<title>Speed Stars - Play on Poki</title>
 
-      window.addEventListener("resize", setAspectRatio, false);
+	<script>
+	var buildUrl = 'Build';
+	window.config = {
+		loader: 'unity-2020',
+		debug: false,
+		maxRatio: 16 / 9,
+		minRatio: 4 / 3,
 
-      // Fits the aspect ratio to maintain hamburger style, still fitting to the screen dimensions within a range
-      function setAspectRatio()
-      {
-        var x = (window.innerWidth > 0) ? window.innerWidth : screen.width;
-        var y = Math.min((window.innerHeight > 0) ? window.innerHeight : screen.height, x / 1.6);
-        if(x > y * 2.25)
-        {
-          x = y * 2.25;
-          container.style.height = "100vh";
-          container.style.width = "auto";
-        }
-        else
-        {
-          container.style.height = "auto";
-          container.style.width = "100vw";
-        }
-        container.style.aspectRatio = "" + x + "/" + y;
-        //console.log(x + ", " + y);
-      }
+		title: 'Speed Stars',
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
-      }
+		thumbnail: 'https://img.poki.com/cdn-cgi/image/quality=80,width=100,height=100,fit=cover,g=0.5x0.5,f=auto/a398cd4e645b76810031bd97f8697414.png',
+		numScreenshots: 4,
 
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build_v2-35w.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/Build_v2-35w.data",
-        frameworkUrl: buildUrl + "/Build_v2-35w.framework.js",
-        codeUrl: buildUrl + "/Build_v2-35w.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "Luke Doukakis",
-        productName: "Speed Stars",
-        productVersion: "2.35",
-        showBanner: unityShowBanner,
-      };
-
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        config.devicePixelRatio = 1;
-
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
-      }
-
-      canvas.style.background = "url('" + buildUrl + "/Build_v2-35w.jpg') center / cover";
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        setAspectRatio();
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                loadingBar.style.display = "none";
-                // fullscreenButton.onclick = () => {
-                //   unityInstance.SetFullscreen(1);
-                // };
-              }).catch((message) => {
-                alert(message);
-              });
-            };
-
-      document.body.appendChild(script);
-
-    </script>
-  </body>
+		metadata:{
+			"poki_template_version": 1,
+			"extra_html": {
+				"head": [
+					"<!-- will be copied to the resulting head //-->"
+				],
+				"body": [
+					"<!-- will be copied to the resulting body //-->",
+					"<!-- will also be copied to the resulting body //-->"
+				]
+			},
+			"background_color": "#FFFFFF",
+			"background_filename": "Build_v2-35w.jpg",
+			"code_filename": "Build_v2-35w.wasm",
+			"company_name": "Luke Doukakis",
+			"data_filename": "Build_v2-35w.data",
+			"decompression_fallback": "Disabled",
+			"development_player": "false",
+			"framework_filename": "Build_v2-35w.framework.js",
+			"height": "600",
+			"loader_filename": "Build_v2-35w.loader.js",
+			"memory_filename": "",
+			"product_name": "Speed Stars",
+			"product_version": "2.35",
+			"splash_screen_style": "Dark",
+			"symbols_filename": "",
+			"unity_version": "2022.3.19f1",
+			"use_data_caching": "false",
+			"use_threads": "false",
+			"use_wasm": "true",
+			"use_webgl_1_0": "false",
+			"use_webgl_2_0": "true",
+			"width": "960"
+		}
+	};
+	</script>
+</head>
+<body>
+	<script src="https://game-cdn.poki.com/loaders/v3/master-loader.js"></script>
+	<div style="position:absolute;top:0px;left:0px;z-index:9999;margin:10px">
+		This HTML will not be used on Poki.com. A new HTML will be auto generated from the JSON.
+	</div>
+</body>
 </html>
