--- a/ssindex.html
+++ b/ssindex.html
@@ -50,7 +50,7 @@
 			"splash_screen_style": "Dark",
 			"symbols_filename": "",
 			"unity_version": "2022.3.19f1",
-			"use_data_caching": "true",
+			"use_data_caching": "false",
 			"use_threads": "false",
 			"use_wasm": "true",
 			"use_webgl_1_0": "false",
