--- a/index.html
+++ b/index.html
@@ -487,10 +487,8 @@
         src="https://i.imgur.com/P0hnDpS.jpeg"
         alt="profile pic" class="img-fluid profile-pic center-block">
       <h7 style="margin-top: 30px;">
-        Luke Doukakis is a software engineer engineer and digital experience developer primarily focused in games and
-        graphics programming.
-        Specializing in Unity, he is well practiced with C# scripting, shader authoring with HLSL and
-        Universal Render Pipeline, UI development, and character animation with Mecanim system.
+        I am a digital experience developer predominantly interested in games.
+        Specializing in Unity, I am practiced in C# scripting, graphics and shader authoring with URP, character rigging and animation, and UI development, setting my focus primarily towards programming.
       </h7>
   
   
@@ -507,7 +505,6 @@
           class="link">lukedoukakis97@gmail.com</a></p>
   
     </div>
-    <a href="ssindex.html">ss10</a>
   </div>
 
 
