--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     <div class="row text-center row-header"
       style="display: flex; justify-content: center; width: 400px; padding-left: 20px; padding-right: 20px; padding-top: 40px; padding-bottom: 40px;">
       <img
-        src="https://i.imgur.com/P0hnDpS.jpeg"
+        src="pic.jpg"
         alt="profile pic" class="img-fluid profile-pic center-block">
       <h7 style="margin-top: 30px;">
         I am a digital experience developer predominantly interested in games.
