--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
   
   
       <p style="margin: 0px;"> <i style="color:#ffffff; padding-top: 50px; padding-right: 10px; text-align: left;" class='fa'>&#xf041;</i><a
-          style="font-size: 24px; text-align: left;" target="_blank" class="link">Santa Monica,
+          style="font-size: 24px; text-align: left;" target="_blank" class="link">Los Angeles,
           CA</a></p>
   
       <p style="margin: 0px;"> <i style="color:#ffffff; padding-right: 10px; text-align: left;" class='fa'>&#xf09b;</i><a
